--- a/quizzard_derive/Cargo.toml
+++ b/quizzard_derive/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "quizzard"
+name = "quizzard_derive"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
-console = "0.15.7"
-quizzard_derive = { path = "./quizzard_derive" }
+quote = "1.0"
+syn = "2.0"
+proc-macro2 = "1.0"
